--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Isak Jägberg <ijagberg@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rumq-client = "0.1.0-alpha.10"
 tokio = { version = "0.2.18", features = ["macros", "rt-threaded"] }
@@ -13,3 +12,6 @@ structopt = "0.3.14"
 dotenv = "0.15.0"
 log = "0.4"
 pretty_env_logger = "0.3"
+serde = { version = "1.0.110", features = ["derive"] }
+chrono = "0.4.11"
+serde_json = "1.0.53"
