--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-rumq-client = "0.1.0-alpha.10"
+rumqttc = "0.0.3"
 tokio = { version = "0.2.18", features = ["macros", "rt-threaded"] }
 structopt = "0.3.14"
 dotenv = "0.15.0"
